Fix bug with address filter